c/examples/gcc/testsuite/c-c++-common/conflict-markers-4.c
/* Ensure we can handle mismatched conflict markers.  */

int p;

>>>>>>> Some commit message  /* { dg-error "conflict marker" } */

int q;

>>>>>>> Some other commit message  /* { dg-error "conflict marker" } */

int r;
